Lavac Update   实现了try-finally的break劫持   实现了pattern switch   部分实现了Variable Initialization State   部分实现了lambda
修复上次改漏的一些东西
native BsDiff
Intrinsic Injection
new Module

Interner是个纯纯的负优化
另外加入了Xlsx更多的读写支持
重构了密码学部分代码
  更新MutableBigInteger适配
  ChaCha20-Poly1305和AES-GCM采用自增的nonce
修复对EXT的ZEntry报无效的问题
ProgressBar现在会自动计算宽度
DefaultConsole能忽略Ctrl+A之后的Ctrl+C以防止误触发
为MyPassIs增加内存安全擦除
更新MSS引擎包装方式
优化http请求限速方式以及对重定向的处理，修复负range处理问题

隆重推出DAO Maker！
及其他bug修复，loggerprefix修改，GDeflate内存泄露问题等
Lavac 0.13.0 StringFormat + Array Attach
HttpServer x-proxy-sec

合并至20241219
Lavac
  Working on:
    Synchronized_Finally
    Lambda]

  增加lambda变量必须是effectively final的检测
  减少抛异常，增加reportError
  增加一些多线程同步处理
  删除Stage4的method锁
  修改编译器API
  实装ReturnStack
  实装变量压缩模块
   + 如果一个在循环之外定义的变量的endPos在循环体中，那么将其提升至循环块末尾
  实装本地变量表生成
  实装循环跳出检测
  实装StreamChain API
  实装插件系统
  实装try内部的defer
  实装+=表达式的单独覆写
  加入编译宏&匿名类共同使用的workaround
  加入伪类型支持
   加入无符号类型uint32和uint64
   StringConcat -> ~toString
   + pesudo type fix 1

  修复二元表达式解析的一些问题
  修复int和long的最小值解析问题
  修复switch优化不能正确处理fallthrough的bug
  修复pattern switch对分支能否执行的判断bug
  修复JumpSegmentAO自动合并优先级判断问题
  修复VisMap的bug
   a++的变量初始化检测

  新特性：
   常量现在会自动降低类型，若范围合适
    已撤回，出现严重问题
   省略new创建对象
   禁用检查异常
   try允许捕获不会抛出的异常（在'禁用检查异常'特性启用时）
   支持基于变量备份的伪Continuation：Generator<T> 生成器函数

重构AE/FRP
  -> HTTP/2支持全双工
  -> 重构MSSEngine 抽出一个连接无关的上下文 MSSContext

修改Fail2Ban的消息

乱七八糟优化
BufferPool stallRelease 持续为空大于
LZMAInputStream optimize
CEntry asInteger -> asInt
UnsafeCharset invalid -> as-is char
优化Base64编解码性能同时增加错误检测
为OKRouter增加VirtualRef缓存
优化zigzag计算
MyRegionFile支持多线程
Scene Pkg解包支持更多版本
Update CMakeLists.txt

PHP Router支持路径预测回退
新增基于闭包的流
加入下线了快一年的KScript脚本语言
McDiff插件加入了新的cgroupby指令，可以对区块进行二维离散化（WIP）
加入Stitcher
加入IterablePriorityQueue
增加Ini和BEncode的流式序列化支持，修复ini解析bug
加入torrent文件解析
 & 新的InfoHash计算方式
CRC32s 增加 DynByteBuf有关方法

修复缓冲区的错误
修复任务计划程序多线程问题